# Proof_of_dev

./: .dockerignore  .env.example  .eslintignore  .eslintrc.json  .gitignore  CONTRIBUTING.md  Dockerfile  ProofOfDev.sol  ProofOfDev.txt  ProofOfDev_fixed.sol  README.md  TEST_RESULTS.md  ci-playwright-tests.yml  ci-workflow.yml  ci.yml  deploy.js  docker-compose.yml  fix-lockfile.yml  hardhat.config.js  package-lock-1.json  package-lock.json  package-lock1.json  package.json  run-tests.sh  scoring.yml  setup.ps1  setup.sh
.github/workflows/: ci-playwright.yml  ci.yml  deploy.yml  detect-phantom-deps.yml  frontend.yml  integration-tests.yml  lint.yml  test.yml
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  (+1 more)
contracts/: ProofOfDev.sol
data/schema/: mongodb.json
frontend/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
infra/scripts/: dev.js
openapi/: analysis.yaml
scripts/: check-env.js  compile-contract.js  deploy.js  deploy.ts  load-env.js  postinstall.js  registerSchema.ts  sample-mint.js  seed-indexed-wallet.js
services/analysis/: api.js  config.js  db.js  mock.js  normalize.js  package.json  profile.js  push.js  queues.js  resultsChannel.js  scoring.generated.js  scoring.js  tasks.js  worker.js
services/indexer/: Cargo.toml
services/indexer/src/: config.rs  deployments.rs  main.rs  store.rs  verification.rs
test/: ProofOfDev.test.js
tests/: scoring-parity.test.js
tests/integration/: integration.test.js
tests/playwright/: contract.ui.test.ts  playwright.config.ts
(+62 files in other folders)
