[package]
name = "proof-of-dev-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proof-of-dev-indexer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
mongodb = "3.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
